kubernetes/infrastructure/controllers/authentik/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-redis
  namespace: authentik
  labels:
    app.kubernetes.io/name: authentik-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: authentik-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: authentik-redis
    spec:
      priorityClassName: system-cluster-critical
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: redis
          image: redis:8.10.1-alpine
          args:
            - --save
            - ""
            - --appendonly
            - "no"
          ports:
            - name: redis
              containerPort: 6379
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-redis
  namespace: authentik
  labels:
    app.kubernetes.io/name: authentik-redis
spec:
  selector:
    app.kubernetes.io/name: authentik-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
